# audio

./: .buildinfo  .clang-tidy  .flake8  .gitignore  .gitmodules  .lintrunner.toml  .pre-commit-config.yaml  .travis.yml  CITATION  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  _config.yml  backend.html  build.py  compliance.kaldi.html  datasets.html  functional.html  genindex.html  index.html  j.sh  kaldi.html  kaldi_io.html  legacy.html  models.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  repro_dsp.py  requirements-dev.txt  requirements.txt  run_build.sh  search.html  searchindex.js  setup.cfg  setup.py  sox_effects.html  (+7 more)
examples/libtorchaudio/: .gitignore  CMakeLists.txt  README.md  build.sh  create_jittable_pipeline.py  main.cpp  run.sh
examples/libtorchaudio/augmentation/: CMakeLists.txt  README.md  create_jittable_pipeline.py  main.cpp
examples/libtorchaudio/data/: README.md
examples/libtorchaudio/speech_recognition/: CMakeLists.txt  README.md  build_pipeline_from_fairseq.py  build_pipeline_from_huggingface_transformers.py  greedy_decoder.py  parse_librispeech.py  parse_voxforge.py  transcribe.cpp  transcribe_list.cpp
ios/: CMakeLists.txt  build_ios.sh
test/cpp/: CMakeLists.txt
test/cpp/rir/: wall_collision.cpp
torchaudio/csrc/: CMakeLists.txt  build_rir.cpp  export.h  foo.cpp  functional.cpp  functional.h  iir_cuda.cu  iir_cuda.h  kaldi.cpp  kaldifeat.cpp  lfilter.cpp  overdrive.cpp  pybind.cpp  ray_tracing.cpp  register.cpp  rir.cpp  sox.cpp  sox.h  sox_effect.cpp  sox_effect.h  sox_effects.cpp  sox_effects.h  sox_effects_chain.cpp  sox_effects_chain.h  sox_io.cpp  sox_io.h  sox_utils.cpp  sox_utils.h  torchaudio.cpp  transducer.cpp  typedefs.cpp  typedefs.h  utils.cpp  utils.h
torchaudio/csrc/cuctc/: CMakeLists.txt
torchaudio/csrc/cuctc/include/: ctc_prefix_decoder.h  ctc_prefix_decoder_host.h
torchaudio/csrc/cuctc/src/: ctc_fast_divmod.cuh  ctc_prefix_decoder.cpp  ctc_prefix_decoder_kernel_v2.cu  device_data_wrap.h  device_log_prob.cuh  python_binding.cpp
torchaudio/csrc/cuctc/src/bitonic_topk/: bitonic_sort.cuh  (+2 more)
torchaudio/csrc/decoder/: README.md
torchaudio/csrc/decoder/bindings/: _decoder.cpp  _dictionary.cpp  decoder.py  dictionary.py  pybind.cpp
torchaudio/csrc/ffmpeg/: CMakeLists.txt  README.md  binding_utils.cpp  binding_utils.h  buffer.cpp  buffer.h  decoder.cpp  decoder.h  ffmpeg.cpp  ffmpeg.h  filter_graph.cpp  filter_graph.h  hw_context.cpp  libav.cpp  libav.h  macro.h  prototype.cpp  sink.cpp  sink.h  stream_processor.cpp  stream_processor.h  stream_reader.cpp  stream_reader.h  stream_reader_binding.cpp  stream_reader_wrapper.cpp  stream_reader_wrapper.h  streamer.cpp  streamer.h  stub.cpp  stub.h  typedefs.h  utils.cpp
torchaudio/csrc/ffmpeg/pybind/: fileobj.cpp  fileobj.h  pybind.cpp  stream_reader.cpp  stream_reader.h  stream_writer.cpp  stream_writer.h  typedefs.cpp  typedefs.h
torchaudio/csrc/ffmpeg/stream_reader/: buffer.cpp  buffer.h  conversion.cpp  conversion.h  decoder.cpp  decoder.h  packet_buffer.cpp  post_process.cpp  post_process.h  sink.cpp  sink.h  stream_processor.cpp  stream_processor.h  stream_reader.cpp  stream_reader.h  stream_reader_binding.cpp  stream_reader_tensor_binding.cpp  stream_reader_tensor_binding.h  stream_reader_wrapper.cpp  stream_reader_wrapper.h  typedefs.h
torchaudio/csrc/ffmpeg/stream_writer/: audio_converter.cpp  audio_converter.h  audio_output_stream.cpp  audio_output_stream.h  converter.cpp  converter.h  encode_process.cpp  encode_process.h  encoder.cpp  encoder.h  output_stream.cpp  output_stream.h  packet_writer.cpp  stream_writer.cpp  stream_writer.h  stream_writer_binding.cpp  stream_writer_custom_io.cpp  stream_writer_custom_io.h  stream_writer_wrapper.cpp  stream_writer_wrapper.h  tensor_converter.cpp  tensor_converter.h  types.h  video_converter.cpp  video_converter.h  video_output_stream.cpp  video_output_stream.h
torchaudio/csrc/forced_align/: compute.h
torchaudio/csrc/forced_align/cpu/: compute.cpp
torchaudio/csrc/forced_align/gpu/: compute.cu
torchaudio/csrc/kaldi/: kaldi.cc  kaldi.h  register.cpp
torchaudio/csrc/kaldi/base/: kaldi-types.h  version.h
torchaudio/csrc/kaldi/matrix/: kaldi-matrix.cc  kaldi-matrix.h  kaldi-vector.cc  kaldi-vector.h  matrix-lib.h
torchaudio/csrc/kaldi/util/: common-utils.h
torchaudio/csrc/pybind/: pybind.cpp
torchaudio/csrc/pybind/sox/: effects.cpp  effects.h  effects_chain.cpp  effects_chain.h  io.cpp  io.h  utils.cpp  utils.h
torchaudio/csrc/rir/: ray_tracing.cpp  wall.h
torchaudio/csrc/rnn_transducer/: compute.cpp  compute_alphas.cpp  compute_betas.cpp  cpu_kernels.h  cpu_transducer.h  kernel_utils.h  kernels.h  macros.cpp  macros.h  math.h  options.h  transducer.h  types.cpp  types.h  workspace.h
torchaudio/csrc/rnnt/: autograd.cpp  compute.cpp  compute.h  compute_alphas.cpp  compute_betas.cpp  macros.cpp  macros.h  options.h  transducer.h  types.cpp  types.h  workspace.cpp  workspace.h
torchaudio/csrc/rnnt/cpu/: alignment_restrictions.cpp  alignment_restrictions.h  compute.cpp  compute_alphas.cpp  compute_betas.cpp  cpu_kernels.h  cpu_transducer.h  kernel_utils.h  kernels.h  math.h
torchaudio/csrc/rnnt/gpu/: compute.cu  compute_alphas.cu  compute_betas.cu  gpu_alignment_restrictions.cuh  gpu_kernel_utils.cuh  gpu_kernels.cuh  gpu_transducer.h  half.cuh  kernel_utils.h  kernels.h  math.cuh
torchaudio/csrc/sox/: CMakeLists.txt  effects.cpp  effects.h  effects_chain.cpp  effects_chain.h  io.cpp  io.h  legacy.cpp  legacy.h  libsox.cpp  libsox.h  register.cpp  sox.cpp  sox_effects.cpp  sox_effects.h  sox_effects_chain.cpp  sox_effects_chain.h  sox_io.cpp  sox_io.h  sox_utils.cpp  stub.cpp  stub.h  types.cpp  types.h  utils.cpp  utils.h
torchaudio/csrc/sox/pybind/: effects.cpp  effects.h  effects_chain.cpp  effects_chain.h  io.cpp  io.h  pybind.cpp  utils.cpp  utils.h
torchaudio/csrc/transducer/: compute.cpp  compute_alphas.cpp  compute_betas.cpp  cpu_kernels.h  cpu_transducer.h  kernel_utils.h  kernels.h  macros.cpp  macros.h  math.h  options.h  transducer.h  types.cpp  workspace.h
(+7301 files in other folders)
